feat: Добавить запрос DELETE /mails/{mail}
